--- a/sharetaxi/ShareTaxi/src/main/resources/application.properties
+++ b/sharetaxi/ShareTaxi/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=ShareTaxi
+# MySQL connection settings
+spring.datasource.url=jdbc:mysql://localhost:3306/sharetaxi
+spring.datasource.username=root
+spring.datasource.password=Welcome%2000
+
+# JDBC driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate settings for JPA (optional)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.springframework.web=DEBUG
